#################################################
## Installetion
#################################################

# Make this library usable from the system's
# package manager.

comm_header = [
'include/hbm/communication/ipv4address.h',
'include/hbm/communication/ipv6address.h',
'include/hbm/communication/bufferedreader.h',
'include/hbm/communication/multicastserver.h',
'include/hbm/communication/netadapter.h',
'include/hbm/communication/netadapterlist.h',
'include/hbm/communication/netlink.h',
'include/hbm/communication/socketnonblocking.h',
'include/hbm/communication/tcpserver.h',
'include/hbm/debug/stack_trace.hpp',
'include/hbm/exception/errno_exception.hpp',
'include/hbm/exception/exception.hpp',
'include/hbm/exception/jsonrpc_exception.h',
'include/hbm/jsonrpc/jsonrpc_defines.h',
'include/hbm/string/replace.h',
'include/hbm/string/trim.h',
'include/hbm/string/split.h',
'include/hbm/sys/defines.h',
'include/hbm/sys/eventloop.h',
'include/hbm/sys/executecommand.h',
'include/hbm/sys/notifier.h',
'include/hbm/sys/pidfile.h',
'include/hbm/sys/timer.h'
]


install_subdir('hbm',install_dir:'include/')
