
jsoncpp_dep = dependency('jsoncpp')

executable('netadapterview','communication/netadapterview.cpp', dependencies: [hbm_dep,jsoncpp_dep], install:true )

executable('netlinkview','communication/netlinkview.cpp', dependencies: [hbm_dep,jsoncpp_dep],install:true  )

executable('server','communication/Server.cpp', dependencies: [hbm_dep,jsoncpp_dep],install:true  )

executable('client','communication/Client.cpp', dependencies: [hbm_dep,jsoncpp_dep],install:true  )

executable('eventloopperformance','sys/eventloopperformance.cpp', dependencies: hbm_dep,install:true  )
